Blender crash/freeze when game engine is started with animation played directly on camera object with parents. #39928

Closed
opened 2014-04-28 06:44:15 +02:00 by Chris Smith · 6 comments

System Information
Windows 8
GPU AMD 7950
CPU INTEL 3570k

Blender Version
Broken: (Revision 4a1b877)
Worked: (2.7 Official)

Short description of error
Ive tried to narrow down the crash as much as I can but I cant be anymore specific than
It seems to be a crash based on parenting and playing animations on a camera and empty or normal object together.

Im not really sure if im allowed to assign people myself but im quite sure this crash is related to the recent threaded armature updates
revision 1ce726a so assigning to Mitchell Stokes Crash.blend

Exact steps for others to reproduce the error
To recreate crash from scratch make a camera and an empty, parent the empty to the camera. next create a normal object parent the camera to that object
then create an animation that plays on both the empty and the camera.

**System Information** Windows 8 GPU AMD 7950 CPU INTEL 3570k **Blender Version** Broken: (Revision 4a1b877) Worked: (2.7 Official) **Short description of error** Ive tried to narrow down the crash as much as I can but I cant be anymore specific than It seems to be a crash based on parenting and playing animations on a camera and empty or normal object together. Im not really sure if im allowed to assign people myself but im quite sure this crash is related to the recent threaded armature updates revision 1ce726a so assigning to Mitchell Stokes [Crash.blend](https://archive.blender.org/developer/F86244/Crash.blend) **Exact steps for others to reproduce the error** To recreate crash from scratch make a camera and an empty, parent the empty to the camera. next create a normal object parent the camera to that object then create an animation that plays on both the empty and the camera.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Mitchell Stokes was assigned by Chris Smith 2014-04-28 06:44:15 +02:00
Author

Added subscriber: @xonar

Added subscriber: @xonar

This issue was referenced by blender/blender-addons-contrib@362b25b382

This issue was referenced by blender/blender-addons-contrib@362b25b38287cb75e4d22b30bdbc7f47e8eb3fdf

This issue was referenced by 362b25b382

This issue was referenced by 362b25b38287cb75e4d22b30bdbc7f47e8eb3fdf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 362b25b382.

Closed by commit 362b25b382.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39928
No description provided.