source/gameengine/Ketsji/BL_Action.h
@@ -105,6 +105,10 @@ public:
 	 * Update the action's frame, etc.
 	 */
 	void Update(float curtime);
+	/**
+	 * Update object IPOs (note: not thread-safe!)
+	 */
+	void UpdateIPOs();
 
 	// Accessors
 	float GetFrame();
