source/gameengine/Ketsji/BL_ActionManager.h
@@ -98,6 +98,11 @@ public:
 	 */
 	void Update(float);
 
+	/**
+	 * Update object IPOs (note: not thread-safe!)
+	 */
+	void UpdateIPOs();
+
 #ifdef WITH_CXX_GUARDEDALLOC
 	MEM_CXX_CLASS_ALLOC_FUNCS("GE:BL_ActionManager")
 #endif
